--- a/CSC209/Week1/Part3/links.html
+++ b/CSC209/Week1/Part3/links.html
@@ -9,7 +9,7 @@
 
 <a href="https://www.w3schools.com">This is how I learned to do this</a>
 
-<a href="https://www.w3schools.com/" target="_blank">This opens the link in a new tab!</a>
+<p><a href="https://www.w3schools.com/" target="_blank">This opens the link in a new tab!</a></p>
 
 <h2>Absolute URLs</h2>
 <p><a href="https://www.w3.org/">W3C</a></p>
