--- a/CSC209/Week1/Part3/images.html
+++ b/CSC209/Week1/Part3/images.html
@@ -3,7 +3,7 @@
 <head>
 <title>Images</title>
 </head>
-<body>
+<body style="background-color:rgb(218, 177, 229);">
 
 <h1>This Page is Practice with Images</h1>
 
