--- a/CSC209/Week1/Part3/tables.html
+++ b/CSC209/Week1/Part3/tables.html
@@ -8,6 +8,10 @@
 <h1>This Page is Practice with Tables</h1>
 <h2>These are all of the Dragons from House of the Dragon, the prequel to Game of Thrones!</h2>
 
+table, th, td {
+    border: 1px solid black;
+  }
+  
 <table>
     <tr>
       <th>Dragon</th>
