--- a/CSC209/Week1/Part3/tables.html
+++ b/CSC209/Week1/Part3/tables.html
@@ -8,11 +8,7 @@
 <h1>This Page is Practice with Tables</h1>
 <h2>These are all of the Dragons from House of the Dragon, the prequel to Game of Thrones!</h2>
 
-table, th, td {
-    border: 1px solid black;
-  }
-  
-<table>
+<table border="1">
     <tr>
       <th>Dragon</th>
       <th>Dragon-Rider</th>
