--- a/CSC209/startPage.html
+++ b/CSC209/startPage.html
@@ -11,7 +11,7 @@
 
 <h3>Week 1</h3>
 
-<a href=https://amartinez-69.github.io/CSC209/Week1/Part1>Part 1!</a>
+<a href="/Applications/MAMP/htdocs/amartinez-69.github.io/CSC209/Week1">Part 1!</a>
 
 </body>
 </html>
