--- a/CSC209/startPage.html
+++ b/CSC209/startPage.html
@@ -11,7 +11,15 @@
 
 <h3>Week 1</h3>
 
-<a href="/Applications/MAMP/htdocs/amartinez-69.github.io/CSC209/Week1/Part1">Part 1!</a>
+<a href="amartinez-69.github.io/CSC209/Week1/Part1/index.html">Part 1!</a>
+
+<a href="amartinez-69.github.io/CSC209/Week1/Part3/images.html">Part 3: Images Tutorial</a>
+
+<a href="amartinez-69.github.io/CSC209/Week1/Part3/links.html">Part 3: Links Tutorial</a>
+
+<a href="amartinez-69.github.io/CSC209/Week1/Part3/tables.html">Part 3: Tables Tutorial</a>
+
+<h2>Homeworks</h2>
 
 </body>
 </html>
