--- a/CSC209/startPage.html
+++ b/CSC209/startPage.html
@@ -14,15 +14,15 @@
 <a href="amartinez-69.github.io/CSC209/Week1/Part1/index.html">Part 1!</a>
 
 <p>
-    <a href="amartinez-69.github.io/CSC209/Week1/Part3/images.html">Part 3: Images Tutorial</a>
+    <a href="https://amartinez-69.github.io/CSC209/Week1/Part3/images.html">Part 3: Images Tutorial</a>
 </p>
 
 <p>
-    <a href="amartinez-69.github.io/CSC209/Week1/Part3/links.html">Part 3: Links Tutorial</a>
+    <a href="https://amartinez-69.github.io/CSC209/Week1/Part3/links.html">Part 3: Links Tutorial</a>
 </p>
 
 <p>
-    <a href="amartinez-69.github.io/CSC209/Week1/Part3/tables.html">Part 3: Tables Tutorial</a>
+    <a href="https://amartinez-69.github.io/CSC209/Week1/Part3/tables.html">Part 3: Tables Tutorial</a>
 </p>
 
 <h2>Homeworks</h2>
