--- a/CSC209/startPage.html
+++ b/CSC209/startPage.html
@@ -11,7 +11,7 @@
 
 <h3>Week 1</h3>
 
-<a href="amartinez-69.github.io/CSC209/Week1/Part1/index.html">Part 1!</a>
+<a href="https://amartinez-69.github.io/CSC209/Week1/Part1/index.html">Part 1!</a>
 
 <p>
     <a href="https://amartinez-69.github.io/CSC209/Week1/Part3/images.html">Part 3: Images Tutorial</a>
