--- a/CSC209/Weeks/Week1/Part3/dropdown.html
+++ b/CSC209/Weeks/Week1/Part3/dropdown.html
@@ -18,7 +18,15 @@
       <a href="https://www.w3schools.com">Link 2</a>
       <a href="https://www.w3schools.com">Link 3</a>
     </div>
-  </div>
+</div>
+
+<label for="tutorial">Tutorials:</label>
+    <select id="tutorials" name="tutorials">
+        <option value="https://www.w3schools.com">Apple</option>
+        <option value="https://www.w3schools.com">Banana</option>
+        <option value="https://www.w3schools.com">Orange</option>
+        <option value="Grape"></a>>>Grape</option>
+    </select>
 
 <a href="https://www.w3schools.com">This is how I learned to do this</a>
 
