--- a/CSC209/Weeks/Week1/Part3/dropdown.html
+++ b/CSC209/Weeks/Week1/Part3/dropdown.html
@@ -20,14 +20,19 @@
     </div>
 </div>
 
-<label for="tutorial">Tutorials:</label>
-    <select id="tutorials" name="tutorials">
-        <option value="https://www.w3schools.com">Apple</option>
-        <option value="https://www.w3schools.com">Banana</option>
-        <option value="https://www.w3schools.com">Orange</option>
-        <option value="Grape"></a>>>Grape</option>
-    </select>
-
+<ul class="navbar">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li class="dropdown">
+        <a href="#">Services</a>
+        <div class="dropdown-content">
+            <a href="https://www.w3schools.com">Web Development</a>
+            <a href="https://www.w3schools.com">App Development</a>
+            <a href="https://www.w3schools.com">SEO</a>
+        </div>
+    </li>
+    <li><a href="#">Contact</a></li>
+</ul>
 <a href="https://www.w3schools.com">This is how I learned to do this</a>
 
 </body>
