--- a/CSC209/Hwks/Hwk1/myFirstHwkSite.html
+++ b/CSC209/Hwks/Hwk1/myFirstHwkSite.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Homeowrk One</title>
+<title>Homework One</title>
 </head>
-<body>
+<body style="background-color:rgb(229, 204, 237);">
 
 <h1>Homework One!</h1>
 <p>My first paragraph.</p>
@@ -14,27 +14,27 @@
     <dt>
         <a href="https://amartinez-69.github.io/CSC209/Hwks/Hwk1/basics.html">Basics</a>
     </dt>
-    <dd>- black hot drink</dd>
+    <dd>- This tutorial includes the basics.</dd>
     <dt>
         <a href="https://amartinez-69.github.io/CSC209/Weeks/Week1/Part3/images.html">Images</a>
     </dt>
-    <dd>- white cold drink</dd>
+    <dd>- This tutorial is a little site I made wih gifs of one of my favorite little comics: Pusheen! Every image is a link to the Pusheen website. </dd>
     <dt>
         <a href="https://amartinez-69.github.io/CSC209/Weeks/Week1/Part3/tables.html">Tables</a>
     </dt>
-    <dd>- black hot drink</dd>
+    <dd>- This tutorial is practice with tables. I made a table with all of the dragons from one of my favorite shows, House of the Dragon.</dd>
     <dt>
         <a href="https://amartinez-69.github.io/CSC209/Weeks/Week1/Part3/links.html">Links</a>
     </dt>
-    <dd>- black hot drink</dd>
+    <dd>- This tutorial follows the structure of links.</dd>
     <dt>
         <a href="https://amartinez-69.github.io/CSC209/Hwks/Hwk1/quotes.html">Quotes</a>
     </dt>
-    <dd>- black hot drink</dd>
+    <dd>- This tutorial follows the structure of various quotes. I included a little bit of information about Pesto the Penguin, who went viral on tiktok! </dd>
     <dt>
         <a href="https://amartinez-69.github.io/CSC209/Hwks/Hwk1/formatting.html">Formatting</a>
     </dt>
-    <dd>- black hot drink</dd>
+    <dd>- This tutorial follows the structure of formatting.</dd>
 </dl>
 
 <a href="https://www.w3schools.com">This is how I learned to do this</a>
