--- a/CSC209/Hwks/Hwk1/myFirstHwkSite.html
+++ b/CSC209/Hwks/Hwk1/myFirstHwkSite.html
@@ -4,7 +4,11 @@
 <title>Homework One</title>
 </head>
 <body style="background-color:rgb(229, 204, 237);">
-
+<style>
+    h1   {color: rgb(72, 135, 236);}
+    p    {color: rgb(72, 135, 236);}
+    a    {color: rgb(175, 84, 205)}
+</style>
 <h1>Homework One!</h1>
 <p>My first paragraph.</p>
 
