--- a/CSC209/Hwks/Hwk1/myFirstHwkSite.html
+++ b/CSC209/Hwks/Hwk1/myFirstHwkSite.html
@@ -5,9 +5,11 @@
 </head>
 <body style="background-color:rgb(229, 204, 237);">
 <style>
-    h1   {color: rgb(72, 135, 236);}
-    p    {color: rgb(72, 135, 236);}
-    a    {color: rgb(175, 84, 205)}
+    h1   {color: rgb(72, 162, 236); font-family: verdana;}
+    p    {font-family: verdana;}
+    dd   {color: rgb(175, 84, 205); font-family: verdana;}
+    a    {color: rgb(175, 84, 205); font-family: verdana;}
+    h2   {color: rgb(72, 162, 236); font-family: verdana;}
 </style>
 <h1>Homework One!</h1>
 <p>My first paragraph.</p>
