--- a/CSC209/Hwks/Hwk1/myFirstHwkSite.html
+++ b/CSC209/Hwks/Hwk1/myFirstHwkSite.html
@@ -6,7 +6,7 @@
 <body style= "background-image: url('https://media.licdn.com/dms/image/v2/C561BAQHLy87anDXvHw/company-background_10000/company-background_10000/0/1585459447904/pusheen_corp_cover?e=2147483647&v=beta&t=iwOg-wfG04gj0Ek9h6qiSlKl1m0oxiwTjEquVc0s5aU');">
 <style>
     h1   {color: rgb(97, 14, 186); font-family: verdana; background-color: rgb(207, 166, 210);}
-    p    {font-family: verdana; rgb(155, 41, 193);}
+    p    {font-family: verdana; color: rgb(155, 41, 193);}
     dd   {color: rgb(155, 41, 193); font-family: verdana;}
     a    {color: rgb(133, 15, 172); font-family: verdana;}
     h2   {color: rgb(97, 14, 186); font-family: verdana; background-color: rgb(207, 166, 210)}
@@ -43,6 +43,92 @@
     </dt>
     <dd>- This tutorial follows the structure of formatting.</dd>
 </dl>
+
+<h2>Here is a Table of all the Dragons in HOTD!</h2>
+
+<table border="1">
+    <tr>
+      <th>Dragon</th>
+      <th>Dragon-Rider</th>
+      <th>Family</th>
+    </tr>
+    <tr>
+      <td>Syrax</td>
+      <td>Rhaenyra Targaryen</td>
+      <td>Targaryen</td>
+    </tr>
+    <tr>
+      <td>Caraxes</td>
+      <td>Daemon Targaryen</td>
+      <td>Targaryen</td>
+    </tr>
+    <tr>
+        <td>Balerion the Black Dread</td>
+        <td>Viserys I Targaryen</td>
+        <td>Targaryen</td>
+    </tr>
+    <tr>
+        <td>Seasmoke</td>
+        <td>Addam of Hull</td>
+        <td>Out of Wedlock</td>
+    </tr>
+    <tr>
+        <td>Dreamfyre</td>
+        <td>Helaena Targaryen</td>
+        <td>Targaryen</td>
+    </tr>
+    <tr>
+        <td>Vhagar</td>
+        <td>Aemond Targaryen</td>
+        <td>Targaryen</td>
+    </tr>
+    <tr>
+        <td>Meleys</td>
+        <td>Rhaenys Targaryen</td>
+        <td>Targaryen</td>
+    </tr>
+    <tr>
+        <td>Vermax</td>
+        <td>Jacaerys Velaryon</td>
+        <td>Velaryon</td>
+    </tr>
+    <tr>
+        <td>Sunfyre</td>
+        <td>Aegon II Targaryen</td>
+        <td>Targaryen</td>
+    </tr>
+    <tr>
+        <td>Arrax</td>
+        <td>Lucerys Velaryon</td>
+        <td>Velaryon</td>
+    </tr>
+    <tr>
+        <td>Moondancer</td>
+        <td>Baela Targaryen</td>
+        <td>Targaryen</td>
+    </tr>
+    <tr>
+        <td>Tyraxes</td>
+        <td>Joffrey Velaryon</td>
+        <td>Velaryon</td>
+    </tr>
+    <tr>
+        <td>Stormcloud</td>
+        <td>Aegon III Targaryen</td>
+        <td>Targaryen</td>
+    </tr>
+    <tr>
+        <td>Vermithor</td>
+        <td>Hugh Hammer</td>
+        <td>Out of Wedlock</td>
+    </tr>
+    <tr>
+        <td>Silverwing</td>
+        <td>Ulf White</td>
+        <td>Out of Wedlock</td>
+    </tr>
+  </table>
+
 
 <a href="https://www.w3schools.com">This is how I learned to do this</a>
 
