--- a/CSC209/Hwks/Hwk1/myFirstHwkSite.html
+++ b/CSC209/Hwks/Hwk1/myFirstHwkSite.html
@@ -10,6 +10,7 @@
     dd   {color: rgb(155, 41, 193); font-family: verdana;}
     a    {color: rgb(133, 15, 172); font-family: verdana;}
     h2   {color: rgb(97, 14, 186); font-family: verdana; background-color: rgb(207, 166, 210)}
+    table {font-family: verdana;}
 </style>
 <body>
 <h1>Homework One!</h1>
@@ -46,7 +47,7 @@
 
 <h2>Here is a Table of all the Dragons in HOTD!</h2>
 
-<table border="1">
+<table border="2">
     <tr>
       <th>Dragon</th>
       <th>Dragon-Rider</th>
