--- a/CSC209/Hwks/Hwk1/myFirstHwkSite.html
+++ b/CSC209/Hwks/Hwk1/myFirstHwkSite.html
@@ -6,8 +6,8 @@
 <body style= "background-image: url('https://media.licdn.com/dms/image/v2/C561BAQHLy87anDXvHw/company-background_10000/company-background_10000/0/1585459447904/pusheen_corp_cover?e=2147483647&v=beta&t=iwOg-wfG04gj0Ek9h6qiSlKl1m0oxiwTjEquVc0s5aU');">
 <style>
     h1   {color: rgb(97, 14, 186); font-family: verdana; background-color: rgb(207, 166, 210);}
-    p    {font-family: verdana; color: rgb(155, 41, 193);}
-    dd   {color: rgb(155, 41, 193); font-family: verdana;}
+    p    {font-family: verdana;}
+    dd   {font-family: verdana;}
     a    {color: rgb(133, 15, 172); font-family: verdana;}
     h2   {color: rgb(97, 14, 186); font-family: verdana; background-color: rgb(207, 166, 210)}
     table {font-family: verdana;}
