--- a/CSC209/Hwks/Hwk1/myFirstHwkSite.html
+++ b/CSC209/Hwks/Hwk1/myFirstHwkSite.html
@@ -3,13 +3,13 @@
 <head>
 <title>Homework One</title>
 </head>
-<body style= "background-image: url('https://media.licdn.com/dms/image/v2/C561BAQHLy87anDXvHw/company-background_10000/company-background_10000/0/1585459447904/pusheen_corp_cover?e=2147483647&v=beta&t=iwOg-wfG04gj0Ek9h6qiSlKl1m0oxiwTjEquVc0s5aU');">
+<body style= "background-image: url('https://preview.redd.it/a-house-of-the-dragons-wallpaper-v0-kgic93z51hx91.png?auto=webp&s=65dda6c28d500a99842aa5327e2abce6521a11ee');">
 <style>
-    h1   {color: rgb(97, 14, 186); font-family: verdana; background-color: rgb(207, 166, 210);}
+    h1   {color: rgb(27, 4, 51); font-family: verdana; background-color: rgb(138, 164, 225);}
     p    {font-family: verdana;}
     dd   {font-family: verdana;}
-    a    {color: rgb(133, 15, 172); font-family: verdana;}
-    h2   {color: rgb(97, 14, 186); font-family: verdana; background-color: rgb(207, 166, 210)}
+    a    {color: rgb(27, 4, 51); font-family: verdana;}
+    h2   {color: rgb(27, 4, 51); font-family: verdana; background-color: rgb(138, 164, 225)}
     table {font-family: verdana;}
 </style>
 <body>
