--- a/CSC209/Hwks/Hwk1/myFirstHwkSite.html
+++ b/CSC209/Hwks/Hwk1/myFirstHwkSite.html
@@ -160,6 +160,25 @@
     </tr>
   </table>
 
+  <h2>Here are my Top 5 Dragons!</h2>
+  <dl>
+    <dt>Vermithor</dt>
+    <dd>- He makes the best dragon noises!!! (Hear me out:
+        <a href="https://youtu.be/9WU8iYNiNW8?feature=shared">Video of Vermithor!</a> 
+    </dd>
+    <dt>Vhagar</dt>
+    <dd>- She's the oldest dragon actually present in HOTD. She's just a little grandma.</dd>
+    <dt>Meleys</dt>
+    <dd>- She's so pretty :D</dd>
+    <dt>Syrax</dt>
+    <dd>- She's the main protagonist's dragon and they have matching necklaces!! (Here you go: 
+        <a href="https://i.redd.it/xlplaz9gbxbd1.jpeg">Syrax with a necklace!</a>
+    </dd>
+    <dt>Seasmoke</dt>
+    <dd>- Girl couldn't find a rider she liked from the Targaryens so she ran away to find her own. Love that for her!
+    </dd>
+
+</dl>
 
 <a href="https://www.w3schools.com">This is how I learned to do this</a>
 
