--- a/CSC209/Hwks/Hwk1/myFirstHwkSite.html
+++ b/CSC209/Hwks/Hwk1/myFirstHwkSite.html
@@ -8,6 +8,7 @@
     h1   {color: rgb(27, 4, 51); font-family: verdana; background-color: rgb(31, 158, 158);}
     p    {font-family: verdana;}
     dd   {font-family: verdana;}
+    dt   {font-family: verdana;}
     a    {color: rgb(27, 4, 51); font-family: verdana;}
     h2   {color: rgb(27, 4, 51); font-family: verdana; background-color: rgb(31, 158, 158)}
     table {font-family: verdana;}
