--- a/CSC209/Hwks/Hwk1/myFirstHwkSite.html
+++ b/CSC209/Hwks/Hwk1/myFirstHwkSite.html
@@ -15,7 +15,7 @@
 </style>
 <body>
 <h1>Homework One!</h1>
-<p>My first paragraph.</p>
+<p>I wanted to start off with a reflection paragraph. I don’t really like how my website turned out but I hope to come back to this assignment, or make a better site on another assignment in the future because I feel like I have concepts of a plan. For the Tutorials, many went well. I’ve displayed a few of them here, however, for the relative URLs, I’m still struggling to figure out how they work. I included a table of the dragons from House of the Dragon, with links to photos of each dragon (as you can tell, I love dragons). I also included a listed ranking of my top 5 dragons, with a few videos and pictures in the descriptions as to why they’re in my top five. I hope you enjoy :)</p>
 
 <h2>Tutorials! </h2>
 
@@ -165,7 +165,7 @@
   <dl>
     <dt>Vermithor</dt>
     <dd>- He makes the best dragon noises!!! (Hear me out:
-        <a href="https://youtu.be/9WU8iYNiNW8?feature=shared">Video of Vermithor!</a> 
+        <a href="https://youtu.be/9WU8iYNiNW8?feature=shared">Video of Vermithor!)</a> 
     </dd>
     <dt>Vhagar</dt>
     <dd>- She's the oldest dragon actually present in HOTD. She's just a little grandma.</dd>
@@ -173,7 +173,7 @@
     <dd>- She's so pretty :D</dd>
     <dt>Syrax</dt>
     <dd>- She's the main protagonist's dragon and they have matching necklaces!! (Here you go: 
-        <a href="https://i.redd.it/xlplaz9gbxbd1.jpeg">Syrax with a necklace!</a>
+        <a href="https://i.redd.it/xlplaz9gbxbd1.jpeg">Syrax with a necklace!)</a>
     </dd>
     <dt>Seasmoke</dt>
     <dd>- Girl couldn't find a rider she liked from the Targaryens so she ran away to find her own. Love that for her!
