--- a/CSC209/Hwks/Hwk1/myFirstHwkSite.html
+++ b/CSC209/Hwks/Hwk1/myFirstHwkSite.html
@@ -3,7 +3,7 @@
 <head>
 <title>Homework One</title>
 </head>
-<body style= "background-image: url('https://wallpapercat.com/w/full/a/7/1/70111-3840x2160-desktop-4k-dragon-wallpaper-image.jpg');">
+<body style= "background-image: url('https://img.freepik.com/premium-photo/dragon-flying-snowy-mountain-with-aurora-background_1048919-12779.jpg');">
 <style>
     h1   {color: rgb(27, 4, 51); font-family: verdana; background-color: rgb(31, 158, 158);}
     p    {font-family: verdana;}
