--- a/CSC209/Hwks/Hwk1/myFirstHwkSite.html
+++ b/CSC209/Hwks/Hwk1/myFirstHwkSite.html
@@ -3,7 +3,7 @@
 <head>
 <title>Homework One</title>
 </head>
-<body style= "background-image: url('https://img.freepik.com/premium-photo/dragon-flying-snowy-mountain-with-aurora-background_1048919-12779.jpg');">
+<body style= "background-image: url('https://preview.redd.it/a-house-of-the-dragons-wallpaper-v0-kgic93z51hx91.png?auto=webp&s=65dda6c28d500a99842aa5327e2abce6521a11ee');">
 <style>
     h1   {color: rgb(27, 4, 51); font-family: verdana; background-color: rgb(31, 158, 158);}
     p    {font-family: verdana;}
