--- a/CSC209/Hwks/Hwk1/myFirstHwkSite.html
+++ b/CSC209/Hwks/Hwk1/myFirstHwkSite.html
@@ -15,7 +15,7 @@
 </style>
 <body>
 <h1>Homework One!</h1>
-<p>I wanted to start off with a reflection paragraph. I don’t really like how my website turned out but I hope to come back to this assignment, or make a better site on another assignment in the future because I feel like I have concepts of a plan. For the Tutorials, many went well. I’ve displayed a few of them here, however, for the relative URLs, I’m still struggling to figure out how they work. I included a table of the dragons from House of the Dragon, with links to photos of each dragon (as you can tell, I love dragons). I also included a listed ranking of my top 5 dragons, with a few videos and pictures in the descriptions as to why they’re in my top five. I hope you enjoy :)</p>
+<p>I wanted to start off with a reflection paragraph. I don’t really like how my website turned out but I hope to come back to this assignment, or make a better site on another assignment in the future because I feel like I have concepts of a plan. For the Tutorials, many went well. I’ve displayed a few of them here, however, for the relative URLs, I’m still struggling to figure out how they work. I included a table of the dragons from House of the Dragon, with links to photos of each dragon (as you can tell, I love dragons). I also included a listed ranking of my top 5 dragons, with a few videos and pictures in the descriptions as to why they’re in my top five. Each part of the Hw took me around 1.5 hours. I hope you enjoy :)</p>
 
 <h2>Tutorials! </h2>
 
