--- a/CSC209/Weeks/Week2/moreStyles.html
+++ b/CSC209/Weeks/Week2/moreStyles.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Styles Tutorial</title>
 </head>
 <body style="background-color: powderblue;">
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h1 style="background-color: aquamarine; color: blue; font-family: Verdana; font-size: 300%; text-align: center;">This is a heading</h1>
+<p style="background-color: aquamarine; color:aqua; font-family: Verdana; font-size: 160%;">This is a paragraph.</p>
 
 <a href="https://www.w3schools.com">This is how I learned to do this</a>
 
