--- a/CSC209/Weeks/Week2/internalCSS.html
+++ b/CSC209/Weeks/Week2/internalCSS.html
@@ -2,9 +2,17 @@
 <html>
 <head>
 <style>
-body {background-color: powderblue;}
-h1   {color: blue;}
-p    {color: red;}
+h1 {
+  color: blue;
+  font-family: verdana;
+  font-size: 300%;
+}
+p {
+  color: red;
+  font-family: courier;
+  font-size: 160%;
+  border: 2px solid rgb(0, 170, 255)
+}
 </style>
 </head>
 <body>
