--- a/CSC209/Hwks/Hwk2/tutorials/tutorialCollection/classSyntax.html
+++ b/CSC209/Hwks/Hwk2/tutorials/tutorialCollection/classSyntax.html
@@ -2,26 +2,15 @@
 <html>
 <head>
 <style>
-/* Style the element with the id "myHeader" */
-#myHeader {
-  background-color: lightblue;
-  color: black;
-  padding: 40px;
-  text-align: center;
-}
-
-/* Style all elements with the class name "city" */
 .city {
   background-color: tomato;
   color: white;
   padding: 10px;
 }
 </style>
+</head>
 <body>
-<!-- An element with a unique id -->
-<h1 id="myHeader">My Cities</h1>
 
-<!-- Multiple elements with same class -->
 <h2 class="city">London</h2>
 <p>London is the capital of England.</p>
 
