--- a/CSC209/Hwks/Hwk2/tutorials/tutorialCollection/navigationBar.html
+++ b/CSC209/Hwks/Hwk2/tutorials/tutorialCollection/navigationBar.html
@@ -7,14 +7,19 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  width: 200px;
+  width: 25%;
   background-color: #f1f1f1;
+  height: 100%;
+  position: fixed;
+  overflow: auto;
+  border: 1px solid #555
 }
 li a {
   display: block;
   color: #000;
   padding: 8px 16px;
   text-decoration: none;
+  text-align: center;
 }
 
 /* Change the link color on hover */
