--- a/CSC209/Hwks/Hwk2/tutorials/tutorialCollection/websiteLayout.html
+++ b/CSC209/Hwks/Hwk2/tutorials/tutorialCollection/websiteLayout.html
@@ -63,9 +63,9 @@
 <h1 class="header">Random Tutorial page</h1>
 
 <ul class="topnav">
-    <li class="topnav"><a href="id.html">ID Tutorial</a></li>
-    <li class="topnav"><a href="bootstrap.html">Bootstrap Tutorial</a></li>
-    <li class="topnav"><a href="classSyntax.html">Class Syntax Tutorial</a></li>
+    <li><a href="id.html">ID Tutorial</a></li>
+    <li><a href="bootstrap.html">Bootstrap Tutorial</a></li>
+    <li><a href="classSyntax.html">Class Syntax Tutorial</a></li>
 </ul>
 <a href="https://www.w3schools.com">This is how I learned to do this</a>
 
