--- a/CSC209/Hwks/Hwk2/tutorials/tutorialCollection/websiteLayout.html
+++ b/CSC209/Hwks/Hwk2/tutorials/tutorialCollection/websiteLayout.html
@@ -60,12 +60,12 @@
 </head>
 <body>
 
-<h1 class="header">Random Tutorial page</h1>
+<h1 class="header">Random Tutorial Page</h1>
 
 <ul class="topnav">
-    <li><a href="id.html">ID Tutorial</a></li>
-    <li><a href="bootstrap.html">Bootstrap Tutorial</a></li>
-    <li><a href="classSyntax.html">Class Syntax Tutorial</a></li>
+    <a href="id.html">ID Tutorial</a>
+    <a href="bootstrap.html">Bootstrap Tutorial</a>
+    <a href="classSyntax.html">Class Syntax Tutorial</a>
 </ul>
 <a href="https://www.w3schools.com">This is how I learned to do this</a>
 
