--- a/CSC209/Hwks/Hwk2/tutorials/tutorials.html
+++ b/CSC209/Hwks/Hwk2/tutorials/tutorials.html
@@ -3,6 +3,11 @@
 <head>
 <title>Tutorials for Homework 2</title>
 <style>
+    .header {
+        background-color: #f1f1f1;
+        text-align: center;
+        padding: 20px;
+    }
     ul {
       list-style-type: none;
       margin: 0;
@@ -30,6 +35,8 @@
     </style>
 </head>
 <body>
+
+<h1 class="header">Tutorials!</h1>
 
 <ul>
     <li><a href="tutorialCollection/bootstrap.html">Bootstrap Tutorial</a></li>
