--- a/CSC209/Hwks/Hwk2/hwk2StartPage.html
+++ b/CSC209/Hwks/Hwk2/hwk2StartPage.html
@@ -21,19 +21,17 @@ padding: 20px;
 <body>
 <h1 id="myHeader">Hwk 2!</h1>
 
-<h2 class="heading">Tutorials</h2>
-<p>Click
-    <a href="tutorials/tutorials.html">here</a>
-</p>
+<h2 class="heading">
+    <a href="tutorials/tutorials.html">Tutorials</a>
+</h2>
 
-<h2 class="heading">Technical</h1>
-<p>Click
-    <a href="technical/technical.html">here</a>
-</p>
+<h2 class="heading">
+    <a href="technical/technical.html">Technical</a>
+</h1>
 
-<h2 class="heading">Creative</h2>
-<p>Click
-    <a href="creative/creative.html">here</a>
-</p>
+<h2 class="heading">
+    <a href="creative/creative.html">Creative</a>
+</h2>
+
 </body>
 </html>
