--- a/CSC209/Hwks/Hwk2/tutorials/tutorials.html
+++ b/CSC209/Hwks/Hwk2/tutorials/tutorials.html
@@ -50,6 +50,7 @@
     <li><a href="tutorialCollection/navigationBar.html">Navigation Bar</a></li>
     <li><a href="tutorialCollection/noteClass.html">Note Class</a></li>
     <li><a href="tutorialCollection/w3css.html">W3.CSS Tutorial</a></li>
+    <li><a href="tutorialCollection/websiteLayout.html">Website Layout Practice</a></li>
 </ul>
 
 
