--- a/CSC209/Hwks/Hwk2/tutorials/tutorials.html
+++ b/CSC209/Hwks/Hwk2/tutorials/tutorials.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 
-<h1 class="header">Tutorials!</h1>
+<h1 class="header">Tutorials! (2.5 hours)</h1>
 
 <ul>
     <li><a href="tutorialCollection/bootstrap.html">Bootstrap Tutorial</a></li>
