--- a/CSC209/Hwks/Hwk2/hwk2StartPage.html
+++ b/CSC209/Hwks/Hwk2/hwk2StartPage.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+<title>Homework 2 Start Page</title>
 <head>
+<title>Homework 2 Start Page</title>
 <style>
 #myHeader {
   background-color: lightblue;
