--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -6,6 +6,10 @@
 </head>
 
 <body>
-<h1 class="header">Test</h1>
+<h1 class="header">Technical ()</h1>
+
+<ul>
+    <li><a href="Hwk2/hwk2StartPage.html">Start Page</a></li>
+</ul>
 </body>
 </html>
