--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -9,7 +9,7 @@
 <h1 class="header">Technical ()</h1>
 
 <ul>
-    <li><a href="Hwks/Hwk2/hwk2StartPage.html">Start Page</a></li>
+    <li><a href="Hwk2/hwk2StartPage.html">Start Page</a></li>
 </ul>
 </body>
 </html>
