--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -10,6 +10,7 @@
 
 <ul>
     <li><a href="../hwk2StartPage.html">Start Page</a></li>
+    <li><a href="files/CSC209-01_202503_ Syllabus - General Information _ Smith Moodle.pdf">General Info</a></li>
 </ul>
 </body>
 </html>
