--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -11,6 +11,7 @@
 <ul>
     <li><a href="../hwk2StartPage.html">Start Page</a></li>
     <li><a href="files/CSC209-01_202503_ Syllabus - General Information _ Smith Moodle.pdf">General Info</a></li>
+    <li><a href="https://youtu.be/KDorKy-13ak?si=o5B_OnAnYyzmAjS-">SB2025 Halftime Show</a></li>
 </ul>
 </body>
 </html>
