--- a/CSC209/Hwks/Hwk2/tutorials/tutorials.html
+++ b/CSC209/Hwks/Hwk2/tutorials/tutorials.html
@@ -51,6 +51,7 @@
     <li><a href="tutorialCollection/noteClass.html">Note Class</a></li>
     <li><a href="tutorialCollection/w3css.html">W3.CSS Tutorial</a></li>
     <li><a href="tutorialCollection/websiteLayout.html">Website Layout Practice</a></li>
+    <li><a href="../hwk2StartPage.html">Start Page</a></li>
 </ul>
 
 
