--- a/CSC209/Hwks/Hwk2/hwk2StartPage.html
+++ b/CSC209/Hwks/Hwk2/hwk2StartPage.html
@@ -4,15 +4,15 @@
 <title>Homework 2 Start Page</title>
 <style>
 #myHeader {
-  background-color: lightblue;
-  color: black;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   padding: 40px;
   text-align: center;
 }
 .heading {
-background-color: tomato;
+background-color: rgb(0, 0, 0);
 color: white;
-border: 2px solid black;
+border: 2px solid rgb(255, 255, 255);
 margin: 20px;
 padding: 20px;
 }
