--- a/CSC209/Hwks/Hwk2/hwk2StartPage.html
+++ b/CSC209/Hwks/Hwk2/hwk2StartPage.html
@@ -8,6 +8,7 @@
   color: rgb(255, 255, 255);
   padding: 40px;
   text-align: center;
+  border: 1px solid white;
 }
 .heading {
 background-color: rgb(0, 0, 0);
@@ -15,11 +16,12 @@ color: white;
 border: 2px solid rgb(255, 255, 255);
 margin: 20px;
 padding: 20px;
+border: 1px solid white;
 }
 </style>
 </head>
 
-<body>
+<body style="background-color: black;">
 <h1 id="myHeader">Hwk 2!</h1>
 
 <h2 class="heading">
