--- a/CSC209/Hwks/Hwk2/hwk2StartPage.html
+++ b/CSC209/Hwks/Hwk2/hwk2StartPage.html
@@ -18,6 +18,18 @@ margin: 20px;
 padding: 20px;
 border: 1px solid white;
 }
+
+a {
+    color:white;
+}
+
+a:active {
+    color:white;
+}
+
+a[tabindex]:focus {
+    color:white;
+}
 </style>
 </head>
 
