--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 <title>Technical for Homework 2</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="lightmode.css">
 </head>
 
@@ -16,5 +18,11 @@
     <li><a href="files/CSC209-01_202503_ Course work and grading _ Smith Moodle.pdf">Coursework and Grading</a></li>
     <li><a href="https://youtu.be/KDorKy-13ak?si=o5B_OnAnYyzmAjS-">SB2025 Halftime Show</a></li>
 </ul>
+
+<section>
+    <article>
+        <p>Testing</p>
+    </article>
+</section>
 </body>
 </html>
