--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -9,20 +9,22 @@
 
 <body>
 <h1 class="header">Technical ()</h1>
-
-<ul>
-    <li><a href="../hwk2StartPage.html">Start Page</a></li>
-    <li><a href="../tutorials/tutorials.html">Tutorials</a></li>
-    <li><a href="../creative/creative.html">Creative</a></li>
-    <li><a href="files/CSC209-01_202503_ Syllabus - General Information _ Smith Moodle.pdf">General Info</a></li>
-    <li><a href="files/CSC209-01_202503_ Course work and grading _ Smith Moodle.pdf">Coursework and Grading</a></li>
-    <li><a href="https://youtu.be/KDorKy-13ak?si=o5B_OnAnYyzmAjS-">SB2025 Halftime Show</a></li>
-</ul>
-
 <section>
-    <article>
-        <p>Testing</p>
-    </article>
+<nav>
+    <ul>
+        <li><a href="../hwk2StartPage.html">Start Page</a></li>
+        <li><a href="../tutorials/tutorials.html">Tutorials</a></li>
+        <li><a href="../creative/creative.html">Creative</a></li>
+        <li><a href="files/CSC209-01_202503_ Syllabus - General Information _ Smith Moodle.pdf">General Info</a></li>
+        <li><a href="files/CSC209-01_202503_ Course work and grading _ Smith Moodle.pdf">Coursework and Grading</a></li>
+        <li><a href="https://youtu.be/KDorKy-13ak?si=o5B_OnAnYyzmAjS-">SB2025 Halftime Show</a></li>
+    </ul>
+</nav>
+
+<article>
+    <p>Testing</p>
+</article>
+
 </section>
 </body>
 </html>
