--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -9,6 +9,7 @@
 
 <body>
 <h1 class="header">Technical ()</h1>
+<section>
 <nav>
     <ul>
         <li><a href="../hwk2StartPage.html">Start Page</a></li>
@@ -23,6 +24,10 @@
 <article>
     <p>Testing</p>
 </article>
+</section>
 
+<footer>
+    <p>Insert Link Here</p>
+</footer>
 </body>
 </html>
