--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -22,7 +22,7 @@
 </nav>
 
 <article>
-    <img src="files/header.webp" alt="cats" style="width: 300px; height: 125px; align-content: center;">
+    <img src="files/header.webp" alt="cats" style="width: 300px; height: 125px;" class="center">
 </article>
 </section>
 
