--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -23,6 +23,10 @@
 
 <article>
     <img src="files/header.webp" alt="cats" style="width: 300px; height: 125px;" class="center">
+
+    <h2>CSC209 Web Programming</h2>
+    <h3>Some Information</h3>
+
 </article>
 </section>
 
