--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -28,6 +28,23 @@
     <h3>Some Information</h3>
     <span id="more">I honestly don't know what to put here, so I'm going to do a little reflection thus far: I feel like I'm getting the hang of this a little bit, especially now that I understand relative paths a bit more. My webpages seem to be working just fine and it's making me very relieved.</span>
     <button onclick="myFunction()" id="myBtn">Read Me</button>
+    <script>
+        function myFunction() {
+            var dots = document.getElementById("dots");
+            var moreText = document.getElementById("more");
+            var btnText = document.getElementById("myBtn");
+
+            if (dots.style.display === "none") {
+                dots.style.display = "inline";
+                btnText.innerHTML = "Read more";
+                moreText.style.display = "none";
+            } else {
+                dots.style.display = "none";
+                btnText.innerHTML = "Read less";
+                moreText.style.display = "inline";
+            }
+        }
+    </script>
 </article>
 </section>
 
