--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -30,16 +30,13 @@
     <button onclick="myFunction()" id="myBtn">Read Me</button>
     <script>
         function myFunction() {
-            var dots = document.getElementById("dots");
             var moreText = document.getElementById("more");
             var btnText = document.getElementById("myBtn");
 
-            if (dots.style.display === "none") {
-                dots.style.display = "inline";
-                btnText.innerHTML = "Read more";
+            if (moreText.style.display === "none") {
+                btnText.innerHTML = "Read Me";
                 moreText.style.display = "none";
             } else {
-                dots.style.display = "none";
                 btnText.innerHTML = "Read less";
                 moreText.style.display = "inline";
             }
