--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -38,7 +38,7 @@
                 moreText.style.display = "none";
             } else {
                 btnText.innerHTML = "Read less";
-                moreText.style.display = "inline";
+                moreText.style.display = "none";
             }
         }
     </script>
