--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -37,12 +37,10 @@
                 btnText.innerHTML = "Read Me";
                 moreText.style.display = "none";
             } else {
-                btnText.innerHTML = "Read less";
+                btnText.innerHTML = "Hide";
                 moreText.style.display = "inline";
-            } if(moreText.style.display === "inline") {
-                btnText.innerHTML = "Read Me";
-                moretext.style.display = "none";
-            }
+            } 
+            
         }
     </script>
 </article>
