--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -33,10 +33,11 @@
             var moreText = document.getElementById("more");
             var btnText = document.getElementById("myBtn");
 
-            if (moreText.style.display === "none") {
+            if (moreText.style.display === "none" || btnText.innerHTML === "Hide") {
                 btnText.innerHTML = "Read Me";
             } else {
                 btnText.innerHTML = "Hide";
+                moreText.style.display === "none"
             } 
             
         }
