--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -37,7 +37,7 @@
                 btnText.innerHTML = "Read Me";
             } else {
                 btnText.innerHTML = "Hide";
-                moreText.style.display === "none"
+                moreText.style.display === "inline"
             } 
             
         }
