--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -33,7 +33,7 @@
             var moreText = document.getElementById("more");
             var btnText = document.getElementById("myBtn");
 
-            if (moreText.style.display === "none" || moreText.style.display === "") {
+            if (moreText.style.display === "none") {
                 btnText.innerHTML = "Read Me";
             } else {
                 btnText.innerHTML = "Hide";
