--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -35,10 +35,10 @@
 
             if (moreText.style.display === "none") {
                 btnText.innerHTML = "Read Me";
-
+                
             } else {
                 btnText.innerHTML = "Hide";
-                moreText.style.display = "inline"
+                moreText.style.display = "inline";
             } 
             
         }
