--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -27,16 +27,20 @@
     <h2>CSC209 Web Programming</h2>
     <h3>Some Information</h3>
     <span id="more">I honestly don't know what to put here, so I'm going to do a little reflection thus far: I feel like I'm getting the hang of this a little bit, especially now that I understand relative paths a bit more. My webpages seem to be working just fine and it's making me very relieved.</span>
+    <span id="hide"></span>
     <button onclick="myFunction()" id="myBtn">Read Me</button>
     <script>
         function myFunction() {
+            var hideText - document.getElementById("hide")
             var moreText = document.getElementById("more");
             var btnText = document.getElementById("myBtn");
 
-            if (moreText.style.display === "none") {
+            if (hideText.style.display === "none") {
                 btnText.innerHTML = "Read Me";
-                
+                hideText.style.display = "inline";
+                moreText.style.display = "none";
             } else {
+                hideText.style.display = "none";
                 btnText.innerHTML = "Hide";
                 moreText.style.display = "inline";
             } 
