--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -26,8 +26,7 @@
 
     <h2>CSC209 Web Programming</h2>
     <h3>Some Information</h3>
-    <span id="more">I honestly don't know what to put here, so I'm going to do a little reflection thus far: I feel like I'm getting the hang of this a little bit, especially now that I understand relative paths a bit more. My webpages seem to be working just fine and it's making me very relieved.</span>
-    <span id="hide"></span>
+    <p><span id="hide"></span><span id="more">I honestly don't know what to put here, so I'm going to do a little reflection thus far: I feel like I'm getting the hang of this a little bit, especially now that I understand relative paths a bit more. My webpages seem to be working just fine and it's making me very relieved.</span></p>
     <button onclick="myFunction()" id="myBtn">Read Me</button>
     <script>
         function myFunction() {
