--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -30,7 +30,7 @@
     <button onclick="myFunction()" id="myBtn">Read Me</button>
     <script>
         function myFunction() {
-            var hideText - document.getElementById("hide")
+            var hideText = document.getElementById("hide")
             var moreText = document.getElementById("more");
             var btnText = document.getElementById("myBtn");
 
