--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -46,6 +46,38 @@
             
         }
     </script>
+    <table border="5px">
+        <tr>
+            <th>Week</th>
+            <th>Date</th>
+            <th>Topic</th>
+            <th>HWK</th>
+        </tr>
+        <tr>
+            <th>1</th>
+            <th>January 29</th>
+            <th>Software installation. Introduction to Html via W3schools tutorials.</th>
+            <th>HWK1</th>
+        </tr>
+        <tr>
+            <th>2</th>
+            <th>February 5</th>
+            <th>Styling in plain Html and using Css.</th>
+            <th>HWK2</th>
+        </tr>
+        <tr>
+            <th>3</th>
+            <th>February 12</th>
+            <th>Dynamic web pages with Javascript: functions, button actions. Part 1: Non-repetitive structures. More Javascript. Arrays of strings. Generate dynamic html lists. </th>
+            <th>HWK3</th>
+        </tr>
+        <tr>
+            <th>4</th>
+            <th>February 19</th>
+            <th>More Javascript</th>
+            <th>HWK4</th>
+        </tr>
+    </table>
 </article>
 </section>
 
