--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -54,7 +54,9 @@
             <th>HWK</th>
         </tr>
         <tr style="height:70px">
-            <th>1</th>
+            <th>
+                <a href="https://www.w3schools.com/html/default.asp">1</a>
+            </th>
             <th>January 29</th>
             <th>Software installation. Introduction to Html via W3schools tutorials.</th>
             <th>HWK1</th>
