--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -62,7 +62,9 @@
             <th>HWK1</th>
         </tr>
         <tr style="height:70px"> 
-            <th>2</th>
+            <th>
+                <a href="https://www.w3schools.com/css/default.asp">2</a>
+            </th>
             <th>February 5</th>
             <th>Styling in plain Html and using Css.</th>
             <th>HWK2</th>
