--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -46,7 +46,8 @@
             
         }
     </script>
-    <button class="button"; onClick="swapStyleSheet('darkmode.css')">Click Here!</button>
+    <button class="button"; onClick="swapStyleSheet('darkmode.css')">Invert!</button>
+    <button class="button"; onClick="swapStyleSheet('lightmode.css')">Revert!</button>
     <script type="text/javascript">
         function swapStyleSheet(sheet){
              document.getElementById('pagestyle').setAttribute('href',sheet);
