--- a/CSC209/Hwks/Hwk2/technical/technical.html
+++ b/CSC209/Hwks/Hwk2/technical/technical.html
@@ -77,13 +77,17 @@
             <th>HWK2</th>
         </tr>
         <tr tyle="height:70px">
-            <th>3</th>
+            <th>
+                <a href="files/week3.html">3</a>
+            </th>
             <th>February 12</th>
             <th>Dynamic web pages with Javascript: functions, button actions. Part 1: Non-repetitive structures. More Javascript. Arrays of strings. Generate dynamic html lists. </th>
             <th>HWK3</th>
         </tr>
         <tr tyle="height:70px">
-            <th>4</th>
+            <th>
+                <a href="files/week4.html">4</a>
+            </th>
             <th>February 19</th>
             <th>More Javascript</th>
             <th>HWK4</th>
