--- a/CSC209/Hwks/Hwk2/creative/creative.html
+++ b/CSC209/Hwks/Hwk2/creative/creative.html
@@ -19,7 +19,7 @@
 </nav>
 
 <article>
-    <img src="files/header.webp" alt="cats" style="width: 300px; height: 125px;" class="center">
+    <img src="files/pusheen_artspotlight_header.jpg" alt="cats" style="width: 300px; height: 100;" class="center">
 
     <h2>CSC209 Web Programming</h2>
     <h3>Some Information</h3>
