--- a/CSC209/Hwks/Hwk2/creative/creative.html
+++ b/CSC209/Hwks/Hwk2/creative/creative.html
@@ -14,6 +14,8 @@
     <ul>
         <li><a href="../hwk2StartPage.html">Start Page</a></li>
         <li><a href="../tutorials/tutorials.html">Tutorials</a></li>
+        <li><a href="../technical/technical.html">Technical</a></li>
+        <li><a href="aboutMe.html">About Me</a></li>
         <li><a href="https://youtu.be/KDorKy-13ak?si=o5B_OnAnYyzmAjS-">SB2025 Halftime Show</a></li>
     </ul>
 </nav>
@@ -21,9 +23,9 @@
 <article>
     <img src="files/pusheen_artspotlight_header.jpg" alt="cats" style="width: 420px; height: 140px;" class="center">
 
-    <h2>CSC209 Web Programming</h2>
+    <h2>I Don't Know</h2>
     <h3>Some Information</h3>
-    <p><span id="hide"></span><span id="more">I honestly don't know what to put here, so I'm going to do a little reflection thus far: I feel like I'm getting the hang of this a little bit, especially now that I understand relative paths a bit more. My webpages seem to be working just fine and it's making me very relieved.</span></p>
+    <p><span id="hide"></span><span id="more">Once again, I'm not the most creative so I decided to use the same format from technical in my creative part. I've decided to make it varying shades of green to match the Pusheen header (by the way, all images on this webpage were taken from the internet). I also included a link in the navigation bar to a little about me page that I created to practice some other features I learned from the tutorials. </span></p>
     <button onclick="myFunction()" id="myBtn" class="button">Read Me</button>
     <script>
         function myFunction() {
