--- a/CSC209/Hwks/Hwk2/creative/creative.html
+++ b/CSC209/Hwks/Hwk2/creative/creative.html
@@ -45,8 +45,8 @@
             
         }
     </script>
-    <button class="button"; onClick="swapStyleSheet('darkmode.css')">Invert</button>
-    <button class="button"; onClick="swapStyleSheet('lightmode.css')">Black Background</button>
+    <button class="button"; onClick="swapStyleSheet('darkmode.css')">Black&White</button>
+    <button class="button"; onClick="swapStyleSheet('lightmode.css')">Revert</button>
     <script type="text/javascript">
         function swapStyleSheet(sheet){
              document.getElementById('pagestyle').setAttribute('href',sheet);
