--- a/CSC209/Hwks/Hwk2/creative/creative.html
+++ b/CSC209/Hwks/Hwk2/creative/creative.html
@@ -4,7 +4,7 @@
 <title>Creative for Homework 2</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link id="pagestyle" rel="stylesheet" href="lightmode.css">
+<link id="pagestyle" rel="stylesheet" href="green.css">
 </head>
 
 <body>
@@ -15,7 +15,6 @@
         <li><a href="../hwk2StartPage.html">Start Page</a></li>
         <li><a href="../tutorials/tutorials.html">Tutorials</a></li>
         <li><a href="../technical/technical.html">Technical</a></li>
-        <li><a href="aboutMe.html">About Me</a></li>
         <li><a href="https://youtu.be/KDorKy-13ak?si=o5B_OnAnYyzmAjS-">SB2025 Halftime Show</a></li>
     </ul>
 </nav>
@@ -23,7 +22,7 @@
 <article>
     <img src="files/pusheen_artspotlight_header.jpg" alt="cats" style="width: 420px; height: 140px;" class="center">
 
-    <h2>I Don't Know</h2>
+    <h2>I Don't Know, About Me?</h2>
     <h3>Some Information</h3>
     <p><span id="hide"></span><span id="more">Once again, I'm not the most creative so I decided to use the same format from technical in my creative part. I've decided to make it varying shades of green to match the Pusheen header (by the way, all images on this webpage were taken from the internet). I also included a link in the navigation bar to a little about me page that I created to practice some other features I learned from the tutorials. </span></p>
     <button onclick="myFunction()" id="myBtn" class="button">Read Me</button>
@@ -46,19 +45,20 @@
         }
     </script>
     <button class="button"; onClick="swapStyleSheet('darkmode.css')">Black&White</button>
-    <button class="button"; onClick="swapStyleSheet('lightmode.css')">Revert</button>
+    <button class="button"; onClick="swapStyleSheet('green.css')">Revert</button>
     <script type="text/javascript">
         function swapStyleSheet(sheet){
              document.getElementById('pagestyle').setAttribute('href',sheet);
         }
         </script>
         <p> </p>
+    <h3>Courses for the Spring Semester!</h3>
     <table border="5px">
         <tr style="height:20px"> 
-            <th>Week</th>
-            <th>Date</th>
-            <th>Topic</th>
-            <th>HWK</th>
+            <th>Course</th>
+            <th>Code</th>
+            <th>Meeting Pattern</th>
+            <th>Room and Building</th>
         </tr>
         <tr style="height:70px">
             <th>
