--- a/CSC209/Hwks/Hwk2/creative/creative.html
+++ b/CSC209/Hwks/Hwk2/creative/creative.html
@@ -61,36 +61,28 @@
             <th>Room and Building</th>
         </tr>
         <tr style="height:70px">
-            <th>
-                <a href="https://www.w3schools.com/html/default.asp">1</a>
-            </th>
-            <th>January 29</th>
-            <th>Software installation. Introduction to Html via W3schools tutorials.</th>
-            <th>HWK1</th>
+            <th>Web Programming</th>
+            <th>CSC209</th>
+            <th>Wednesday, 1:20-4:00pm</th>
+            <th>Sabin-Reed 220</th>
         </tr>
         <tr style="height:70px"> 
-            <th>
-                <a href="https://www.w3schools.com/css/default.asp">2</a>
-            </th>
-            <th>February 5</th>
-            <th>Styling in plain Html and using Css.</th>
-            <th>HWK2</th>
+            <th>Intermediate Macroeconomics</th>
+            <th>ECO253</th>
+            <th>Monday, Wednesday, and Friday, 10:50am-12:05pm</th>
+            <th>Hillyer 103</th>
         </tr>
         <tr tyle="height:70px">
-            <th>
-                <a href="files/week3.html">3</a>
-            </th>
-            <th>February 12</th>
-            <th>Dynamic web pages with Javascript: functions, button actions. Part 1: Non-repetitive structures. More Javascript. Arrays of strings. Generate dynamic html lists. </th>
-            <th>HWK3</th>
+            <th>Behavioral Economics</th>
+            <th>ECO254</th>
+            <th>Tuesday and Thursday, 9:25-10:40am</th>
+            <th>Seelye 101</th>
         </tr>
-        <tr tyle="height:70px">
-            <th>
-                <a href="files/week4.html">4</a>
-            </th>
-            <th>February 19</th>
-            <th>More Javascript</th>
-            <th>HWK4</th>
+        <tr style="height:70px">
+            <th>Intro Electronics and Arduino</th>
+            <th>CSC233</th>
+            <th>Tuesday and Thursday, 2:45-4:00pm</th>
+            <th>Bass 204</th>
         </tr>
     </table>
     <p> </p>
