--- a/CSC209/Hwks/Hwk2/creative/creative.html
+++ b/CSC209/Hwks/Hwk2/creative/creative.html
@@ -24,7 +24,7 @@
 
     <h2>I Don't Know, About Me?</h2>
     <h3>Some Information</h3>
-    <p><span id="hide"></span><span id="more">Once again, I'm not the most creative so I decided to use the same format from technical in my creative part. I've decided to make it varying shades of green to match the Pusheen header (by the way, all images on this webpage were taken from the internet). I also included a link in the navigation bar to a little about me page that I created to practice some other features I learned from the tutorials. </span></p>
+    <p><span id="hide"></span><span id="more">Once again, I'm not the most creative so I decided to use the same format from technical in my creative part. I've decided to make it varying shades of green to match the Pusheen header (by the way, all images on this webpage were taken from the internet). I also included a little about me section to practice some other features I learned from the tutorials, such as an animated accordion-style feature with a few fun facts about me, like my favorite artists, my plans for the summer, and my hobbies!</accordion-style>. </span></p>
     <button onclick="myFunction()" id="myBtn" class="button">Read Me</button>
     <script>
         function myFunction() {
@@ -86,17 +86,17 @@
         </tr>
     </table>
     <p> </p>
-    <button class="accordion">Section 1</button>
+    <button class="accordion">My Hobbies</button>
     <div class="panel">
       <p>Lorem ipsum...</p>
     </div>
     
-    <button class="accordion">Section 2</button>
+    <button class="accordion">My Favorite Artists at the Moment!</button>
     <div class="panel">
       <p>Lorem ipsum...</p>
     </div>
     
-    <button class="accordion">Section 3</button>
+    <button class="accordion">Summer Plans?</button>
     <div class="panel">
       <p>Lorem ipsum...</p>
     </div>
