--- a/CSC209/Hwks/Hwk2/creative/creative.html
+++ b/CSC209/Hwks/Hwk2/creative/creative.html
@@ -86,6 +86,8 @@
         </tr>
     </table>
     <p> </p>
+
+    <h2>More About Me!</h2>
     <button class="accordion">My Hobbies</button>
     <div class="panel">
       <p>Lorem ipsum...</p>
