--- a/CSC209/Hwks/Hwk2/creative/creative.html
+++ b/CSC209/Hwks/Hwk2/creative/creative.html
@@ -90,7 +90,7 @@
     <h2>More About Me!</h2>
     <button class="accordion">My Hobbies</button>
     <div class="panel">
-      <p>Lorem ipsum...</p>
+      <p>Lately I haven’t had much time to do my hobbies because of school and work and the like. But usually I’m a big reader, like a BIG reader. I think one year I managed to read 50 books in total, but that was definitely a couple years ago. Last year I didn’t even make it to 20 books, but I digress. I also love to bake! On my public Instagram page, I have an entire highlight dedicated to my baked goods (and my dog is in most of the pictures, haha). Unfortunately, because smith doesn’t really have too many usable kitchens (especially in Duckett house, which is my house) so I’m never able to bake on campus, but when I go back home I bake a ton! </p>
     </div>
     
     <button class="accordion">My Favorite Artists at the Moment!</button>
