--- a/CSC209/Hwks/Hwk2/creative/creative.html
+++ b/CSC209/Hwks/Hwk2/creative/creative.html
@@ -95,7 +95,7 @@
     
     <button class="accordion">My Favorite Artists at the Moment!</button>
     <div class="panel">
-      <p>Lorem ipsum...</p>
+      <p>I’ll admit, my taste in music isn’t everyone’s cup of tea, but lately my music taste has definitely gotten better (trust me). I used to listen to a lot of Taylor Swift, like she was my most listened to artist for a solid three years. But lately I’ve been listening to a lot of Chappell Roan (I LOVE Chappell Roan), Kendrick Lamar (I have the Super Bowl halftime show linked in the navigation bar), Sabrina Carpenter (nothing new there), and 6arelyhuman (pronounced Barely Human)! I have some songs from different artists on rotation as well, such as Headlock by Imogen Heap, VVV (HES BACK) by mikeeysmind, and Love Potions by BJ Lips. </p>
     </div>
     
     <button class="accordion">Summer Plans?</button>
