--- a/CSC209/Hwks/Hwk2/creative/creative.html
+++ b/CSC209/Hwks/Hwk2/creative/creative.html
@@ -52,7 +52,7 @@
         }
         </script>
         <p> </p>
-    <h3>Courses for the Spring Semester!</h3>
+    <h3>Courses for the Spring Semester! (As a Computer Science and Quantitative Economics Double Majoring Junior)</h3>
     <table border="5px">
         <tr style="height:20px"> 
             <th>Course</th>
