--- a/CSC209/Hwks/Hwk2/creative/creative.html
+++ b/CSC209/Hwks/Hwk2/creative/creative.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<h1 class="header">Creative ( hours)</h1>
+<h1 class="header">Creative (2 hours)</h1>
 <section>
 <nav>
     <ul>
@@ -102,7 +102,7 @@
     
     <button class="accordion">Summer Plans?</button>
     <div class="panel">
-      <p>Lorem ipsum...</p>
+      <p>Well, I hope to go back to the Dominican Republic in May. That was the original plan, but there’s a good chance that the family I’m supposed to visit is actually coming to the U.S.  but it’s okay, I’ll take my own little vacation at some point. Otherwise, I have an internship! I’ll be Apple Bank’s IT intern for the second summer in a row. I’ll be in New York City (although, I already live there so the novelty of it has worn off) and I’ll be working there from June 2nd to August 7th (I think…). I had a lot of fun last year and the bank became my safe haven, so I’m really happy to be coming back! I get to see my big sister (not really my big sister, but basically my big sister) again! She also works in the IT department. Other things happening this summer are: my 21st birthday (yay), maybe some travel, lots of time with friends!!! </p>
     </div>
     <script>
         var acc = document.getElementsByClassName("accordion");
@@ -120,6 +120,8 @@
           });
         }
         </script>
+
+    <h2>Thank you for listening to my incessant yapping!</h2>
 </article>
 </section>
 
