--- a/CSC209/Hwks/Hwk2/creative/creative.html
+++ b/CSC209/Hwks/Hwk2/creative/creative.html
@@ -122,6 +122,7 @@
         </script>
 
     <h2>Thank you for listening to my incessant yapping!</h2>
+    <img src="files/tumblr_ms20vpk95w1qhy6c9o1_500.webp" alt="cats" style="width: 100px; height: 100px;" class="center">
 </article>
 </section>
 
