--- a/CSC209/Hwks/Hwk2/creative/creative.html
+++ b/CSC209/Hwks/Hwk2/creative/creative.html
@@ -122,7 +122,8 @@
         </script>
 
     <h2>Thank you for listening to my incessant yapping!</h2>
-    <img src="files/tumblr_ms20vpk95w1qhy6c9o1_500.webp" alt="cats" style="width: 100px; height: 100px;" class="center">
+    <img src="files/tumblr_ms20vpk95w1qhy6c9o1_500.webp" alt="cats" style="width: 200px; height: 200px;" class="center">
+    <p>Again, all images are taken from the internet.</p>
 </article>
 </section>
 
