--- a/CSC209/startPage.html
+++ b/CSC209/startPage.html
@@ -28,7 +28,7 @@
 <h2>Homeworks</h2>
 
 <p>
-    <a href="Hwks/Hwk2/hwk2StartPage.html">HWK2</a>
+    <a href="../Hwks/Hwk2/hwk2StartPage.html">HWK2</a>
 </p>
 </body>
 </html>
