--- a/CSC209/Weeks/Week3/lightbulb.html
+++ b/CSC209/Weeks/Week3/lightbulb.html
@@ -10,7 +10,7 @@
 
 <button onclick="document.getElementById('myImage').src='pic_bulbon.gif'">Turn on the light</button>
 
-<img id="myImage" src="pic_bulboff.gif" style="width:100px">
+<img id="myImage" src="files/pic_bulboff.gif" style="width:100px">
 
 <button onclick="document.getElementById('myImage').src='pic_bulboff.gif'">Turn off the light</button>
 
