--- a/CSC209/Weeks/Week3/demo.html
+++ b/CSC209/Weeks/Week3/demo.html
@@ -13,5 +13,12 @@ function myFunction() {
 <p id="demo">A Paragraph</p>
 <button type="button" onclick="myFunction()">Try it</button>
 
+
+<script>
+    function myFunction() {
+      document.getElementById("demo").innerHTML = "Paragraph changed.";
+    }
+</script>
+    
 </body>
 </html>
