--- a/CSC209/Hwks/Hwk3/technical/technical.html
+++ b/CSC209/Hwks/Hwk3/technical/technical.html
@@ -4,7 +4,7 @@
 <title>Technical for Homework 2</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link id="pagestyle" rel="stylesheet" href="lightmode.css">
+<link id="pagestyle" rel="stylesheet" href="css/lightmode.css">
 </head>
 
 <body>
